k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3     # Jumlah Pod yg akan dibuat
  selector:       # 3 baris ke bawah berperan menghubungkan Service dgn Deployment
    matchLabels:
      component: web
  template:          # Bagian ini ke bawah berperan sebagai Pod
    metadata:
      labels:
        component: web
    spec:
      containers:   # tanda strip (-) di bawah adalah List. Artinya kita bisa mendaftarkan berbagai macam image
        - name: client
          image: stephengrider/multi-client
          ports:
            - containerPort: 3000
